2001-07-29  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* utils/autoanswer.pl.in:
	    Fixing buggy tests; originally about "$nosend", but
	    there were some other too..	

	* include/mail.h.in:
	    Forgot this from the inject below...

2001-07-05  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* include/libc.h, include/mail.h.in, libc/mail.c, libc/sfmail.c,
	  scheduler/msgerror.c, smtpserver/smtpdata.c, 
	  transports/errormail/errormail.c, transports/smtp/getmxrr.c:
	    Changed (properly) the _*mail_close_() inode parameter to
	    be 'long'.

2001-07-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transports/errormail/errormail.c:
	    Recognize source channel 'error', and produce the destination
	    address accordingly -- ugly thing to do an "error-in-error"
	    message that way, but..

	* transports/mailbox/mailbox.c:
	    Recognize (and wipe out, and re-insert at delivery) incoming
	    headers "Original-Recipient:"  (for RFC 2298 section 2.3),
	    and "Envelope-ID:".

2001-06-15  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* transport/smtp/smtp.c:
	    In synchronous SMTP connections, handle the result
	    processing correctly so that permanent reject with
	    MAIL FROM will permanently reject the message..

2001-06-11  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* utils/mxverify/mxverify-cgi.c:
	    Print out the user supplied input (arg strings) properly
	    protected so that even if the input happens to be HTML
	    text in disguise, it shows up as "a string".

2001-06-04  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/transport.c, scheduler/msgerror.c:
	    Oh no, one-off string length after  cfgdirpath()  function
	    behaviour change.   Got around to write \0 to child, which
	    promptly misbehaved...

	* scheduler/transport.c, scheduler/conf.c:
	    Under some mysterious conditions (Linux kernel 2.4.5-pre4... ??)
	    the scheduler does not get select on read on dead childrens
	    stdout ??
